deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapp-deployment
  labels:
    tier: frontend
    app: nginx
spec:
    selector:
      matchLabels:
        app: myapp #label matters
    replicas: 6
    template:
      metadata:
        name: nginx-2
        labels: 
          app: myapp #label matters
      spec:
          containers:
            - name: nginx
              image: nginx
