service-definition.yaml
apiVersion: v1
kind: Service
metadata:
  name: myapp-service
spec: 
    type: NodePort
    ports:
      - port: 80
        targetPort: 80
        nodePort: 30004
    selector:
      app: myapp
